@@ -1,13 +1,10 @@
 package com.markian.rentitup.User.UserDto;
 
 import com.markian.rentitup.Machine.MachineDto.MachineMapper;
-import com.markian.rentitup.Machine.MachineDto.MachineResponseDto;
 import com.markian.rentitup.User.Role;
 import com.markian.rentitup.User.User;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserMapper {
@@ -34,14 +31,19 @@ public class UserMapper {
         responseDto.setEmail(user.getEmail());
         responseDto.setFullName(user.getFullName());
         responseDto.setPhone(user.getPhone());
+        responseDto.setProfileImage(user.getProfileImageUrl());
         responseDto.setRole(user.getRole());
+        responseDto.setCreatedAt(user.getCreatedAt());
+        responseDto.setVerificationImage(user.getVerificationImageUrl());
+        responseDto.setVerified(user.getVerified());
+        responseDto.setRegistrationId(user.getRegistrationId());
         responseDto.setVerifiedAt(user.getVerifiedAt());
-
-        if (user.getOwnedMachines() != null && !user.getOwnedMachines().isEmpty()) {
-            List<MachineResponseDto> machineResponseDtos = user.getOwnedMachines().stream()
-                    .map(machineMapper::toResponseDto)
-                    .collect(Collectors.toList());
-            responseDto.setOwnedMachines(machineResponseDtos);
+        if (user.getOwnedMachines() != null) {
+            responseDto.setOwnedMachines(
+                    user.getOwnedMachines().stream()
+                            .map(machineMapper::toResponseDto)
+                            .toList()
+            );
         }
 
         return responseDto;
@@ -53,7 +55,6 @@ public class UserMapper {
         responseDto.setEmail(user.getEmail());
         responseDto.setFullName(user.getFullName());
         responseDto.setRole(user.getRole());
-        responseDto.setVerified(user.getVerifiedAt() != null);
         return responseDto;
     }
 }
